--- a/manifest.json
+++ b/manifest.json
@@ -12,6 +12,6 @@
    },
    "manifest_version": 3,
    "name": "FillJoy Simple Form Filler",
-   "permissions": [ "activeTab", "scripting" ],
-   "version": "3.4.0"
+   "permissions": [ "activeTab", "scripting", "downloads" ],
+   "version": "3.5.0"
 }
