Update Export Fields feature: move to bottom, open in new tab
- Moved Export Fields button to bottom of popup
- Opens beautifully formatted HTML page in new tab instead of downloading
- Added visual field information display with color-coded badges
- Shows field types, IDs, names, labels, options, and normalized values
- Includes 'Copy JSON' button for raw data access
- Removed downloads permission (no longer needed)
- Added 🔍 emoji to button for better UX

--- a/manifest.json
+++ b/manifest.json
@@ -12,6 +12,6 @@
    },
    "manifest_version": 3,
    "name": "FillJoy Simple Form Filler",
-   "permissions": [ "activeTab", "scripting", "downloads" ],
+   "permissions": [ "activeTab", "scripting" ],
    "version": "3.5.0"
 }
